--- a/Sunrise_Terminal/Sunrise_Terminal.csproj
+++ b/Sunrise_Terminal/Sunrise_Terminal.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject></StartupObject>
+    <ApplicationIcon>360_F_489582035_n6ZdyhSljpg2o5v27RtjeBX9gbTsbkMS.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="360_F_489582035_n6ZdyhSljpg2o5v27RtjeBX9gbTsbkMS.ico" />
+  </ItemGroup>
 
 </Project>
